environment/blade/bookinfo/base/gloo-mesh/enterprise-networking/enterprise-networking-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: enterprise-networking
  namespace: istio-system
spec:
  hosts:
  - "relay.jad.solo.io"
  gateways:
  - relay-gateway
  tcp:
  - match:
    - port: 9900
    route:
    - destination:
        host: enterprise-networking.gloo-mesh.svc.cluster.local
        port:
          number: 9900
